--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "ethers": "^6.4.0",
     "hardhat": "^2.22.5",
     "hardhat-gas-reporter": "^1.0.8",
+    "mocha": "^10.6.0",
     "prettier": "^3.3.2",
     "prettier-plugin-solidity": "^1.3.1",
     "solidity-coverage": "^0.8.0",
