--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "narendra_reddy <narendrareddy54321@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "@chainlink/contracts": "^1.1.1",
     "@nomicfoundation/hardhat-chai-matchers": "^2.0.0",
     "@nomicfoundation/hardhat-ethers": "^3.0.0",
     "@nomicfoundation/hardhat-ignition": "^0.15.0",
@@ -13,16 +14,19 @@
     "@nomicfoundation/hardhat-network-helpers": "^1.0.0",
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
     "@nomicfoundation/hardhat-verify": "^2.0.0",
+    "@nomiclabs/hardhat-ethers": "npm:hardhat-deploy-ethers",
     "@typechain/ethers-v6": "^0.5.0",
     "@typechain/hardhat": "^9.0.0",
     "chai": "^4.2.0",
-    "ethers": "^6.4.0",
+    "dotenv": "^16.4.5",
+    "ether": "^0.0.9",
+    "ethers": "^6.13.1",
     "hardhat": "^2.22.6",
+    "hardhat-deploy": "^0.12.4",
+    "hardhat-deploy-ethers": "^0.4.2",
     "hardhat-gas-reporter": "^1.0.8",
     "solidity-coverage": "^0.8.0",
     "typechain": "^8.3.0"
   },
-  "dependencies": {
-    "@nomiclabs/hardhat-solhint": "^3.1.0"
-  }
+  "dependencies": {}
 }
